wip pivot component

--- a/metro-components.html
+++ b/metro-components.html
@@ -86,6 +86,7 @@
                   <li><a href="./wizard.html">Wizard</a></li>
                   <li><a href="./icons.html">Icons</a></li>
                   <li><a href="./toast.html">Toast Notifications</a></li>
+                  <li><a href="./pivot.html">Pivot</a></li>
                   <li><a href="./metro-components.html">Metro Components</a></li>
                   <li class="divider"></li>
                   <li><a href="./scaffolding.html">Bootstrap Scaffolding</a></li>
@@ -99,21 +100,11 @@
             </div>
          </div>
          <div id="top-info" class="span5 pull-right">
-         <a id="settings" class="pull-right" href="#">
-            <b class="icon-settings"></b>
-         </a>
-         <hr class="separator pull-right"/>
-         <a href="#" class="pull-right">
-            <div class="top-info-block">
-               <h3>FirstName</h3>
-               <h4>LastName</h4>
-            </div>
-            <div class="top-info-block">
-               <b class="icon-user-2"></b>
-            </div>
-         </a>
+            <a id="settings" class="pull-right" href="#">
+               <b class="icon-settings"></b>
+            </a>
+         </div>
       </div>
-   </div>
    </header>
    <div class="container">
       <p class="lead">Here we have various Metro specific components.</p>
