--- a/widepeek-tiles-templates.html
+++ b/widepeek-tiles-templates.html
@@ -171,6 +171,7 @@
    <script type="text/javascript" src="scripts/jquery.scrollTo.js"></script>
    <script type="text/javascript" src="scripts/bootstrap.min.js"></script>
    <script type="text/javascript" src="scripts/bootmetro.js"></script>
+   <script type="text/javascript" src="scripts/bootmetro-pivot.js"></script>
    <script type="text/javascript" src="scripts/bootmetro-charms.js"></script>
    <script type="text/javascript" src="scripts/jquery.nicescroll.js"></script>
    <script type="text/javascript" src="scripts/demo.js"></script>
@@ -178,7 +179,9 @@
    <script type="text/javascript" src="scripts/bootstrap-datepicker.js"></script>
 
    <script type="text/javascript">
-      $(".metro").metro();
+      $('.metro').metro();
+
+      $('#pivot').pivot();
    </script>
 </body>
 </html>
