--- a/hub.html
+++ b/hub.html
@@ -235,17 +235,16 @@
    
                </div>
    
-   
             </div>
-   
-            <!-- <a id="tiles-scroll-prev" class="win-command carousel-control left" href="#metro-carousel" data-slide="prev">
-               <span class="win-commandimage win-commandring">&#xe05d;</span>
-            </a>
-            <a id="tiles-scroll-next"  class="win-command carousel-control right" href="#metro-carousel" data-slide="next">
-               <span class="win-commandimage win-commandring">&#xe059;</span>
-            </a> -->
-   
          </div>
+   
+         <a id="tiles-scroll-prev" class="-win-command" href="#">&#xe05d;
+            <!--<span class="-win-commandimage -win-commandring">&#xe05d;</span>-->
+         </a>
+         <a id="tiles-scroll-next"  class="-win-command" href="#">&#xe059;
+            <!--<span class="-win-commandimage -win-commandring">&#xe059;</span>-->
+         </a>
+   
       </div>
    </div>
    
