--- a/hub.html
+++ b/hub.html
@@ -238,12 +238,8 @@
             </div>
          </div>
    
-         <a id="tiles-scroll-prev" class="-win-command" href="#">&#xe05d;
-            <!--<span class="-win-commandimage -win-commandring">&#xe05d;</span>-->
-         </a>
-         <a id="tiles-scroll-next"  class="-win-command" href="#">&#xe059;
-            <!--<span class="-win-commandimage -win-commandring">&#xe059;</span>-->
-         </a>
+         <a id="tiles-scroll-prev" href="#">&#xe05d;</a>
+         <a id="tiles-scroll-next" href="#">&#xe059;</a>
    
       </div>
    </div>
