wip: Refactored panorama
old bootmetro.js renamed to bootmetro-panorama.js
hub classes renamed from metro* to panorama*

--- a/icons.html
+++ b/icons.html
@@ -5567,18 +5567,19 @@
    <script>window.jQuery || document.write("<script src='scripts/jquery-1.8.3.min.js'>\x3C/script>")</script>
 
    <script type="text/javascript" src="scripts/google-code-prettify/prettify.js"></script>
-   <script type="text/javascript" src="scripts/jquery.scrollTo.js"></script>
+   <!--<script type="text/javascript" src="scripts/jquery.scrollTo.js"></script>-->
    <script type="text/javascript" src="scripts/bootstrap.min.js"></script>
-   <script type="text/javascript" src="scripts/bootmetro.js"></script>
+   <script type="text/javascript" src="scripts/bootmetro-panorama.js"></script>
    <script type="text/javascript" src="scripts/bootmetro-pivot.js"></script>
    <script type="text/javascript" src="scripts/bootmetro-charms.js"></script>
+   <script type="text/javascript" src="scripts/bootstrap-datepicker.js"></script>
    <script type="text/javascript" src="scripts/jquery.nicescroll.js"></script>
+   <script type="text/javascript" src="scripts/jgestures.js"></script>
    <script type="text/javascript" src="scripts/demo.js"></script>
    <script type="text/javascript" src="scripts/holder.js"></script>
-   <script type="text/javascript" src="scripts/bootstrap-datepicker.js"></script>
 
    <script type="text/javascript">
-      $('.metro').metro();
+      $('#hub').panorama();
 
       $('#pivot').pivot();
    </script>
