--- a/hub.html
+++ b/hub.html
@@ -119,10 +119,10 @@
    
    <div class="container-fluid">
       <div class="row-fluid">
-         <div id="hub" class="metro span12">
-            <div class="metro-sections">
+         <div id="hub" class="metro panorama span12">
+            <div class="panorama-sections">
    
-               <div id="section1" class="metro-section tile-span-4">
+               <div id="section1" class="panorama-section tile-span-4">
    
                   <h2>BootMetro Demos</h2>
    
@@ -190,7 +190,7 @@
    
                </div>
    
-               <div id="section2" class="metro-section tile-span-4">
+               <div id="section2" class="panorama-section tile-span-4">
    
                   <h2>Bootstrap Metro</h2>
    
@@ -238,8 +238,8 @@
             </div>
          </div>
    
-         <a id="tiles-scroll-prev" href="#">&#xe05d;</a>
-         <a id="tiles-scroll-next" href="#">&#xe059;</a>
+         <a id="panorama-scroll-prev" href="#">&#xe05d;</a>
+         <a id="panorama-scroll-next" href="#">&#xe059;</a>
    
       </div>
    </div>
@@ -275,18 +275,19 @@
    <script>window.jQuery || document.write("<script src='scripts/jquery-1.8.3.min.js'>\x3C/script>")</script>
 
    <script type="text/javascript" src="scripts/google-code-prettify/prettify.js"></script>
-   <script type="text/javascript" src="scripts/jquery.scrollTo.js"></script>
+   <!--<script type="text/javascript" src="scripts/jquery.scrollTo.js"></script>-->
    <script type="text/javascript" src="scripts/bootstrap.min.js"></script>
-   <script type="text/javascript" src="scripts/bootmetro.js"></script>
+   <script type="text/javascript" src="scripts/bootmetro-panorama.js"></script>
    <script type="text/javascript" src="scripts/bootmetro-pivot.js"></script>
    <script type="text/javascript" src="scripts/bootmetro-charms.js"></script>
+   <script type="text/javascript" src="scripts/bootstrap-datepicker.js"></script>
    <script type="text/javascript" src="scripts/jquery.nicescroll.js"></script>
+   <script type="text/javascript" src="scripts/jgestures.js"></script>
    <script type="text/javascript" src="scripts/demo.js"></script>
    <script type="text/javascript" src="scripts/holder.js"></script>
-   <script type="text/javascript" src="scripts/bootstrap-datepicker.js"></script>
 
    <script type="text/javascript">
-      $('.metro').metro();
+      $('#hub').panorama();
 
       $('#pivot').pivot();
    </script>
