--- a/toast.html
+++ b/toast.html
@@ -251,13 +251,15 @@
    <script type="text/javascript" src="scripts/bootmetro-pivot.js"></script>
    <script type="text/javascript" src="scripts/bootmetro-charms.js"></script>
    <script type="text/javascript" src="scripts/bootstrap-datepicker.js"></script>
-   <script type="text/javascript" src="scripts/jquery.nicescroll.js"></script>
-   <script type="text/javascript" src="scripts/jgestures.js"></script>
+   <!--<script type="text/javascript" src="scripts/jquery.nicescroll.js"></script>-->
+   <script type="text/javascript" src="scripts/jquery.touchSwipe.js"></script>
    <script type="text/javascript" src="scripts/demo.js"></script>
    <script type="text/javascript" src="scripts/holder.js"></script>
 
    <script type="text/javascript">
-      $('#hub').panorama();
+      $('#hub').panorama({
+         nicescroll: false
+      });
 
       $('#pivot').pivot();
    </script>
