Closed Issue #43. wip convert metro-ui-light.css to less

--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
    <link rel="stylesheet" type="text/css" href="content/css/bootmetro-icons.css">
    <link rel="stylesheet" type="text/css" href="content/css/bootmetro.css">
    <link rel="stylesheet" type="text/css" href="content/css/bootmetro-responsive.css">
-   <link rel="stylesheet" type="text/css" href="content/css/metro-ui-light.css">
+   <link rel="stylesheet" type="text/css" href="content/css/bootmetro-ui-light.css">
    <link rel="stylesheet" type="text/css" href="content/css/datepicker.css">
    <!--[if IE 7]>
    <link rel="stylesheet" type="text/css" href="assets/css/bootmetro-icons-ie7.css">
@@ -125,7 +125,7 @@
    
             <h2>Contributors <small></small></h2>
             <p>
-               I wish to thank Alexander Finger for his support and all the githubbers who keep me on the road to improve the project.
+               I wish to thank Alexander Finger &amp; David Smith for their support and all the githubbers who keep me on the road to improve the project.
             </p>
    
          </div>
