--- a/hub.html
+++ b/hub.html
@@ -65,9 +65,9 @@
 
    <!-- Header
    ================================================== -->
-   <header id="nav-bar" class="container-fluid">
-      <div class="row-fluid">
-         <div class="span7">
+   <header id="nav-bar" class="container">
+      <div class="row">
+         <div class="span12">
             <div id="header-container">
                <a id="backbutton" class="win-backbutton" href="./index.html"></a>
                <h5>BootMetro</h5>
@@ -98,29 +98,30 @@
                </ul>
             </div>
             </div>
+            <div id="top-info" class="pull-right">
+            <a id="settings" class="pull-right" href="#">
+               <b class="icon-settings"></b>
+            </a>
+            <hr class="separator pull-right"/>
+            <a href="#" class="pull-right">
+               <div class="top-info-block">
+                  <h3>FirstName</h3>
+                  <h4>LastName</h4>
+               </div>
+               <div class="top-info-block">
+                  <b class="icon-user-2"></b>
+               </div>
+            </a>
          </div>
-         <div id="top-info" class="span5 pull-right">
-         <a id="settings" class="pull-right" href="#">
-            <b class="icon-settings"></b>
-         </a>
-         <hr class="separator pull-right"/>
-         <a href="#" class="pull-right">
-            <div class="top-info-block">
-               <h3>FirstName</h3>
-               <h4>LastName</h4>
-            </div>
-            <div class="top-info-block">
-               <b class="icon-user-2"></b>
-            </div>
-         </a>
       </div>
-   </div>
+      </div>
    </header>
    
-   <div class="container-fluid">
-      <div class="row-fluid">
-         <div id="hub" class="metro panorama span12">
-            <div class="panorama-sections">
+   <div class="container">
+      <div class="row">
+         <div id="hub" class="metro span12">
+            <div class="panorama">
+               <div class="panorama-sections">
    
                <div id="section1" class="panorama-section tile-span-4">
    
@@ -236,11 +237,10 @@
                </div>
    
             </div>
+            </div>
+            <a id="panorama-scroll-prev" href="#">&#xe05d;</a>
+            <a id="panorama-scroll-next" href="#">&#xe059;</a>
          </div>
-   
-         <a id="panorama-scroll-prev" href="#">&#xe05d;</a>
-         <a id="panorama-scroll-next" href="#">&#xe059;</a>
-   
       </div>
    </div>
    
@@ -275,7 +275,6 @@
    <script>window.jQuery || document.write("<script src='scripts/jquery-1.8.3.min.js'>\x3C/script>")</script>
 
    <script type="text/javascript" src="scripts/google-code-prettify/prettify.js"></script>
-   <!--<script type="text/javascript" src="scripts/jquery.scrollTo.js"></script>-->
    <script type="text/javascript" src="scripts/bootstrap.min.js"></script>
    <script type="text/javascript" src="scripts/bootmetro-panorama.js"></script>
    <script type="text/javascript" src="scripts/bootmetro-pivot.js"></script>
@@ -285,10 +284,11 @@
    <script type="text/javascript" src="scripts/jquery.touchSwipe.js"></script>
    <script type="text/javascript" src="scripts/demo.js"></script>
    <script type="text/javascript" src="scripts/holder.js"></script>
-
    <script type="text/javascript">
-      $('#hub').panorama({
-         nicescroll: false
+      $('.panorama').panorama({
+         nicescroll: false,
+         showscrollbuttons: true,
+         keyboard: true
       });
 
       $('#pivot').pivot();
