--- a/square-tiles-templates.html
+++ b/square-tiles-templates.html
@@ -65,9 +65,9 @@
 
    <!-- Header
    ================================================== -->
-   <header id="nav-bar" class="container-fluid">
-      <div class="row-fluid">
-         <div class="span7">
+   <header id="nav-bar" class="container">
+      <div class="row">
+         <div class="span12">
             <div id="header-container">
                <a id="backbutton" class="win-backbutton" href="./tiles-templates.html"></a>
                <h5>BootMetro</h5>
@@ -98,16 +98,16 @@
                </ul>
             </div>
             </div>
-         </div>
-         <div id="top-info" class="span5 pull-right">
-            <a id="settings" class="pull-right" href="#">
-               <b class="icon-settings"></b>
-            </a>
+            <div id="top-info" class="pull-right">
+               <a id="settings" class="pull-right" href="#">
+                  <b class="icon-settings"></b>
+               </a>
+            </div>
          </div>
       </div>
    </header>
    
-   <div class="container-fluid">
+   <div class="container">
       <div class="subnav">
          <ul class="nav nav-pills">
             <li><a href="#textonly">Text Only Tiles</a></li>
@@ -118,8 +118,8 @@
    </div>
    
    
-   <div class="container-fluid metro">
-      <div class="row-fluid">
+   <div class="container metro">
+      <div class="row">
          <div class="span12">
    
    
@@ -338,7 +338,6 @@
    <script>window.jQuery || document.write("<script src='scripts/jquery-1.8.3.min.js'>\x3C/script>")</script>
 
    <script type="text/javascript" src="scripts/google-code-prettify/prettify.js"></script>
-   <!--<script type="text/javascript" src="scripts/jquery.scrollTo.js"></script>-->
    <script type="text/javascript" src="scripts/bootstrap.min.js"></script>
    <script type="text/javascript" src="scripts/bootmetro-panorama.js"></script>
    <script type="text/javascript" src="scripts/bootmetro-pivot.js"></script>
@@ -348,10 +347,11 @@
    <script type="text/javascript" src="scripts/jquery.touchSwipe.js"></script>
    <script type="text/javascript" src="scripts/demo.js"></script>
    <script type="text/javascript" src="scripts/holder.js"></script>
-
    <script type="text/javascript">
-      $('#hub').panorama({
-         nicescroll: false
+      $('.panorama').panorama({
+         nicescroll: false,
+         showscrollbuttons: true,
+         keyboard: true
       });
 
       $('#pivot').pivot();
