--- a/widepeek-tiles-templates.html
+++ b/widepeek-tiles-templates.html
@@ -65,9 +65,9 @@
 
    <!-- Header
    ================================================== -->
-   <header id="nav-bar" class="container-fluid">
-      <div class="row-fluid">
-         <div class="span7">
+   <header id="nav-bar" class="container">
+      <div class="row">
+         <div class="span12">
             <div id="header-container">
                <a id="backbutton" class="win-backbutton" href="./tiles-templates.html"></a>
                <h5>BootMetro</h5>
@@ -98,46 +98,46 @@
                </ul>
             </div>
             </div>
-         </div>
-         <div id="top-info" class="span5 pull-right">
-            <a id="settings" class="pull-right" href="#">
-               <b class="icon-settings"></b>
-            </a>
+            <div id="top-info" class="pull-right">
+               <a id="settings" class="pull-right" href="#">
+                  <b class="icon-settings"></b>
+               </a>
+            </div>
          </div>
       </div>
    </header>
    
-   <div class="container-fluid metro">
-   <div class="row-fluid">
-   <div class="span12">
+   <div class="container metro">
+      <div class="row">
+         <div class="span12">
    
-   <table id="widepeek" class="table">
-      <caption><h3>Wide Peek templates</h3></caption>
-      <thead>
-         <tr>
-            <th>Template Name</th>
-            <th>Description</th>
-            <th>Tile</th>
-         </tr>
-      </thead>
-      <tbody>
-         <tr>
-            <td><strong>[TODO] TileWidePeekImageCollection01</strong></td>
-            <td>Top: One large square image with four smaller square images to its right, no text. Bottom: One header string in larger text over one string of regular text wrapped over a maximum of four lines.</td>
-            <td>
-               <a class="tile widepeek" href="#">
-                  <div class="tile-image-wrapper">
-                     <img src="content/img/tile-wide.jpg" alt=""/>
-                  </div>
-                  <div class="text">Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim.</div>
-               </a>
-            </td>
-         </tr>
-      </tbody>
-   </table>
+            <table id="widepeek" class="table">
+               <caption><h3>Wide Peek templates</h3></caption>
+               <thead>
+                  <tr>
+                     <th>Template Name</th>
+                     <th>Description</th>
+                     <th>Tile</th>
+                  </tr>
+               </thead>
+               <tbody>
+                  <tr>
+                     <td><strong>[TODO] TileWidePeekImageCollection01</strong></td>
+                     <td>Top: One large square image with four smaller square images to its right, no text. Bottom: One header string in larger text over one string of regular text wrapped over a maximum of four lines.</td>
+                     <td>
+                        <a class="tile widepeek" href="#">
+                           <div class="tile-image-wrapper">
+                              <img src="content/img/tile-wide.jpg" alt=""/>
+                           </div>
+                           <div class="text">Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim.</div>
+                        </a>
+                     </td>
+                  </tr>
+               </tbody>
+            </table>
    
-   </div>
-   </div>
+         </div>
+      </div>
    </div>   <div id="charms" class="win-ui-dark slide">
    
       <div id="theme-charms-section" class="charms-section">
@@ -168,7 +168,6 @@
    <script>window.jQuery || document.write("<script src='scripts/jquery-1.8.3.min.js'>\x3C/script>")</script>
 
    <script type="text/javascript" src="scripts/google-code-prettify/prettify.js"></script>
-   <!--<script type="text/javascript" src="scripts/jquery.scrollTo.js"></script>-->
    <script type="text/javascript" src="scripts/bootstrap.min.js"></script>
    <script type="text/javascript" src="scripts/bootmetro-panorama.js"></script>
    <script type="text/javascript" src="scripts/bootmetro-pivot.js"></script>
@@ -178,10 +177,11 @@
    <script type="text/javascript" src="scripts/jquery.touchSwipe.js"></script>
    <script type="text/javascript" src="scripts/demo.js"></script>
    <script type="text/javascript" src="scripts/holder.js"></script>
-
    <script type="text/javascript">
-      $('#hub').panorama({
-         nicescroll: false
+      $('.panorama').panorama({
+         nicescroll: false,
+         showscrollbuttons: true,
+         keyboard: true
       });
 
       $('#pivot').pivot();
