Fixes post BT 2.2.2 integration

--- a/components.html
+++ b/components.html
@@ -1708,17 +1708,17 @@
              <p>Alternatively, you can align each link to the sides:</p>
              <div class="bs-docs-example">
                <ul class="pager">
-                 <li class="previous"><a href="#">&larr; Older</a></li>
-                 <li class="next"><a href="#">Newer &rarr;</a></li>
+                 <li class="previous"><a href="#">Older</a></li>
+                 <li class="next"><a href="#">Newer</a></li>
                </ul>
              </div>
    <pre class="prettyprint linenums">
    &lt;ul class="pager"&gt;
      &lt;li class="previous"&gt;
-       &lt;a href="#"&gt;&amp;larr; Older&lt;/a&gt;
+       &lt;a href="#"&gt;Older&lt;/a&gt;
      &lt;/li&gt;
      &lt;li class="next"&gt;
-       &lt;a href="#"&gt;Newer &amp;rarr;&lt;/a&gt;
+       &lt;a href="#"&gt;Newer&lt;/a&gt;
      &lt;/li&gt;
    &lt;/ul&gt;
    </pre>
@@ -1727,14 +1727,14 @@
              <p>Pager links also use the general <code>.disabled</code> utility class from the pagination.</p>
              <div class="bs-docs-example">
                <ul class="pager">
-                 <li class="previous disabled"><a href="#">&larr; Older</a></li>
-                 <li class="next"><a href="#">Newer &rarr;</a></li>
+                 <li class="previous disabled"><a href="#">Older</a></li>
+                 <li class="next"><a href="#">Newer</a></li>
                </ul>
              </div>
    <pre class="prettyprint linenums">
    &lt;ul class="pager"&gt;
      &lt;li class="previous disabled"&gt;
-       &lt;a href="#"&gt;&amp;larr; Older&lt;/a&gt;
+       &lt;a href="#"&gt;Older&lt;/a&gt;
      &lt;/li&gt;
      ...
    &lt;/ul&gt;
@@ -2093,22 +2093,22 @@
              <p>Wrap any text and an optional dismiss button in <code>.alert</code> for a basic warning alert message.</p>
              <div class="bs-docs-example">
                <div class="alert">
-                 <button type="button" class="close" data-dismiss="alert">&times;</button>
+                 <button type="button" class="close" data-dismiss="alert"></button>
                  <strong>Warning!</strong> Best check yo self, you're not looking too good.
                </div>
              </div>
    <pre class="prettyprint linenums">
    &lt;div class="alert"&gt;
-     &lt;button type="button" class="close" data-dismiss="alert"&gt;&amp;times;&lt;/button&gt;
+     &lt;button type="button" class="close" data-dismiss="alert"&gt;&lt;/button&gt;
      &lt;strong&gt;Warning!&lt;/strong&gt; Best check yo self, you're not looking too good.
    &lt;/div&gt;
    </pre>
    
              <h3>Dismiss buttons</h3>
              <p>Mobile Safari and Mobile Opera browsers, in addition to the <code>data-dismiss="alert"</code> attribute, require an <code>href="#"</code> for the dismissal of alerts when using an <code>&lt;a&gt;</code> tag.</p>
-             <pre class="prettyprint linenums">&lt;a href="#" class="close" data-dismiss="alert"&gt;&amp;times;&lt;/a&gt;</pre>
+             <pre class="prettyprint linenums">&lt;a href="#" class="close" data-dismiss="alert"&gt;&lt;/a&gt;</pre>
              <p>Alternatively, you may use a <code>&lt;button&gt;</code> element with the data attribute, which we have opted to do for our docs. When using <code>&lt;button&gt;</code>, you must include <code>type="button"</code> or your forms may not submit.</p>
-             <pre class="prettyprint linenums">&lt;button type="button" class="close" data-dismiss="alert"&gt;&amp;times;&lt;/button&gt;</pre>
+             <pre class="prettyprint linenums">&lt;button type="button" class="close" data-dismiss="alert"&gt;&lt;/button&gt;</pre>
    
              <h3>Dismiss alerts via JavaScript</h3>
              <p>Use the <a href="./javascript.html#alerts">alerts jQuery plugin</a> for quick and easy dismissal of alerts.</p>
@@ -2121,14 +2121,14 @@
              <p>For longer messages, increase the padding on the top and bottom of the alert wrapper by adding <code>.alert-block</code>.</p>
              <div class="bs-docs-example">
                <div class="alert alert-block">
-                 <button type="button" class="close" data-dismiss="alert">&times;</button>
+                 <button type="button" class="close" data-dismiss="alert"></button>
                  <h4>Warning!</h4>
                  <p>Best check yo self, you're not looking too good. Nulla vitae elit libero, a pharetra augue. Praesent commodo cursus magna, vel scelerisque nisl consectetur et.</p>
                </div>
              </div>
    <pre class="prettyprint linenums">
    &lt;div class="alert alert-block"&gt;
-     &lt;button type="button" class="close" data-dismiss="alert"&gt;&amp;times;&lt;/button&gt;
+     &lt;button type="button" class="close" data-dismiss="alert"&gt;&lt;/button&gt;
      &lt;h4&gt;Warning!&lt;/h4&gt;
      Best check yo self, you're not...
    &lt;/div&gt;
@@ -2144,7 +2144,7 @@
              <h3>Error or danger</h3>
              <div class="bs-docs-example">
                <div class="alert alert-error">
-                 <button type="button" class="close" data-dismiss="alert">&times;</button>
+                 <button type="button" class="close" data-dismiss="alert"></button>
                  <strong>Oh snap!</strong> Change a few things up and try submitting again.
                </div>
              </div>
@@ -2157,7 +2157,7 @@
              <h3>Success</h3>
              <div class="bs-docs-example">
                <div class="alert alert-success">
-                 <button type="button" class="close" data-dismiss="alert">&times;</button>
+                 <button type="button" class="close" data-dismiss="alert"></button>
                  <strong>Well done!</strong> You successfully read this important alert message.
                </div>
              </div>
@@ -2170,7 +2170,7 @@
              <h3>Information</h3>
              <div class="bs-docs-example">
                <div class="alert alert-info">
-                 <button type="button" class="close" data-dismiss="alert">&times;</button>
+                 <button type="button" class="close" data-dismiss="alert"></button>
                  <strong>Heads up!</strong> This alert needs your attention, but it's not super important.
                </div>
              </div>
@@ -2491,7 +2491,7 @@
              <h2>Close icon</h2>
              <p>Use the generic close icon for dismissing content like modals and alerts.</p>
              <div class="bs-docs-example">
-               <p><button class="close" style="float: none;">&times;</button></p>
+               <p><button class="close" style="float: none;"></button></p>
              </div>
              <pre class="prettyprint linenums">&lt;button class="close"&gt;&amp;times;&lt;/button&gt;</pre>
              <p>iOS devices require an href="#" for click events if you would rather use an anchor.</p>
