--- a/javascript.html
+++ b/javascript.html
@@ -224,7 +224,7 @@
              <div class="bs-docs-example" style="background-color: #f5f5f5;">
                <div class="modal" style="position: relative; top: auto; left: auto; right: auto; margin: 0 auto 20px; z-index: 1; max-width: 100%;">
                  <div class="modal-header">
-                   <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                   <button type="button" class="close" data-dismiss="modal" aria-hidden="true"></button>
                    <h3>Modal header</h3>
                  </div>
                  <div class="modal-body">
@@ -1036,14 +1036,14 @@
            <p>Add dismiss functionality to all alert messages with this plugin.</p>
            <div class="bs-docs-example">
              <div class="alert fade in">
-               <button type="button" class="close" data-dismiss="alert">&times;</button>
+               <button type="button" class="close" data-dismiss="alert"></button>
                <strong>Holy guacamole!</strong> Best check yo self, you're not looking too good.
              </div>
            </div>
    
            <div class="bs-docs-example">
              <div class="alert alert-block alert-error fade in">
-               <button type="button" class="close" data-dismiss="alert">&times;</button>
+               <button type="button" class="close" data-dismiss="alert"></button>
                <h4 class="alert-heading">Oh snap! You got an error!</h4>
                <p>Change this and that and try again. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum.</p>
                <p>
@@ -1425,8 +1425,8 @@
                        </div>
                      </div>
                    </div>
-                   <a class="left carousel-control" href="#myCarousel" data-slide="prev">&lsaquo;</a>
-                   <a class="right carousel-control" href="#myCarousel" data-slide="next">&rsaquo;</a>
+                   <a class="left carousel-control" href="#myCarousel" data-slide="prev">&#xe0f4;</a>
+                   <a class="right carousel-control" href="#myCarousel" data-slide="next">&#xe0f1;</a>
                  </div>
                </div>
    <pre class="prettyprint linenums">
