Fix wrong path for images

--- a/components.html
+++ b/components.html
@@ -2491,7 +2491,7 @@
              <h2>Close icon</h2>
              <p>Use the generic close icon for dismissing content like modals and alerts.</p>
              <div class="bs-docs-example">
-               <p><button class="close" style="float: none;"></button></p>
+               <p><button class="close" style="float: none;">&times;</button></p>
              </div>
              <pre class="prettyprint linenums">&lt;button class="close"&gt;&amp;times;&lt;/button&gt;</pre>
              <p>iOS devices require an href="#" for click events if you would rather use an anchor.</p>
